
+++
*** The DOM shr and eww uses has been changed to the general Emacs
xml.el/libxml2 DOM, and a new package dom.el has been added to
interact with this DOM.  See the Emacs Lisp manual for interface
details.

+++
*** `mailcap-mime-data' is now consulted when displaying PDF files.

+++
*** The new `S' command will list all eww buffers, and allow managing
them.

** Message mode

*** text/html messages that contain inline image parts will be
transformed into multipart/related messages before sending.

** pcase
*** New UPatterns `quote' and `app'.
*** New UPatterns can be defined with `pcase-defmacro'.
+++
*** New vector QPattern.

** Lisp mode
*** Strings after `:documentation' are highlighted as docstrings.

** Rectangle editing
*** Rectangle Mark mode can have corners past EOL or in the middle of a TAB.
*** C-x C-x in rectangle-mark-mode now cycles through the four corners.
*** `string-rectangle' provides on-the-fly preview of the result.

** New font-lock functions font-lock-ensure and font-lock-flush, which
should be used instead of font-lock-fontify-buffer when called from Elisp.

** Macro `minibuffer-with-setup-hook' takes (:append FUN) to mean
appending FUN to `minibuffer-setup-hook'.

** cl-lib
*** New functions cl-fresh-line, cl-digit-char-p and cl-parse-integer.

** Calendar and diary

+++
*** New commands to insert diary entries with Chinese dates:
`diary-chinese-insert-anniversary-entry' `diary-chinese-insert-entry'
`diary-chinese-insert-monthly-entry', `diary-chinese-insert-yearly-entry'.

+++
*** The calendar can now list and mark diary entries with Chinese dates.
See `diary-chinese-list-entries' and `diary-chinese-mark-entries'.

---
*** The option `calendar-mode-line-format' can now be nil,
which means to do nothing special with the mode line in calendars.

---
*** Many items obsolete since at least version 23.1 have been removed.
The majority were function/variable/face aliases, too numerous to list here.
The remainder were:
